; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/usb/extr_cdc_ncm.c_cdc_ncm_tx_fixup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/usb/extr_cdc_ncm.c_cdc_ncm_tx_fixup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbnet = type { i64* }
%struct.sk_buff = type { i32 }
%struct.cdc_ncm_ctx = type { i32 }

@USB_CDC_NCM_NDP16_NOCRC_SIGN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.sk_buff* (%struct.usbnet*, %struct.sk_buff*, i32)* @cdc_ncm_tx_fixup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.sk_buff* @cdc_ncm_tx_fixup(%struct.usbnet* %0, %struct.sk_buff* %1, i32 %2) #0 {
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.usbnet*, align 8
  %6 = alloca %struct.sk_buff*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.sk_buff*, align 8
  %9 = alloca %struct.cdc_ncm_ctx*, align 8
  store %struct.usbnet* %0, %struct.usbnet** %5, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load %struct.usbnet*, %struct.usbnet** %5, align 8
  %11 = getelementptr inbounds %struct.usbnet, %struct.usbnet* %10, i32 0, i32 0
  %12 = load i64*, i64** %11, align 8
  %13 = getelementptr inbounds i64, i64* %12, i64 0
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to %struct.cdc_ncm_ctx*
  store %struct.cdc_ncm_ctx* %15, %struct.cdc_ncm_ctx** %9, align 8
  %16 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %9, align 8
  %17 = icmp eq %struct.cdc_ncm_ctx* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  br label %32

19:                                               ; preds = %3
  %20 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %9, align 8
  %21 = getelementptr inbounds %struct.cdc_ncm_ctx, %struct.cdc_ncm_ctx* %20, i32 0, i32 0
  %22 = call i32 @spin_lock_bh(i32* %21)
  %23 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %9, align 8
  %24 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %25 = load i32, i32* @USB_CDC_NCM_NDP16_NOCRC_SIGN, align 4
  %26 = call i32 @cpu_to_le32(i32 %25)
  %27 = call %struct.sk_buff* @cdc_ncm_fill_tx_frame(%struct.cdc_ncm_ctx* %23, %struct.sk_buff* %24, i32 %26)
  store %struct.sk_buff* %27, %struct.sk_buff** %8, align 8
  %28 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %9, align 8
  %29 = getelementptr inbounds %struct.cdc_ncm_ctx, %struct.cdc_ncm_ctx* %28, i32 0, i32 0
  %30 = call i32 @spin_unlock_bh(i32* %29)
  %31 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  store %struct.sk_buff* %31, %struct.sk_buff** %4, align 8
  br label %39

32:                                               ; preds = %18
  %33 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %34 = icmp ne %struct.sk_buff* %33, null
  br i1 %34, label %35, label %38

35:                                               ; preds = %32
  %36 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %37 = call i32 @dev_kfree_skb_any(%struct.sk_buff* %36)
  br label %38

38:                                               ; preds = %35, %32
  store %struct.sk_buff* null, %struct.sk_buff** %4, align 8
  br label %39

39:                                               ; preds = %38, %19
  %40 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  ret %struct.sk_buff* %40
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local %struct.sk_buff* @cdc_ncm_fill_tx_frame(%struct.cdc_ncm_ctx*, %struct.sk_buff*, i32) #1

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1

declare dso_local i32 @dev_kfree_skb_any(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
